--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -12,18 +12,18 @@
             <MudItem xs=12>
                 <MudPaper Elevation="15" Height="200px" Class="pa-4">
                     <MudStack Row="true" AlignItems="AlignItems.Center">
-                        <MudStack>
-                            <MudText Typo="Typo.h4">Post race</MudText>
-                            <MudText Color="Color.Warning">This page is quite unfinished, <br />you can go to the standings though with a following button</MudText>
-                        </MudStack>
-
-                        <MudSpacer />
-
-                        <MudText>Todo for this page:</MudText>
+                        <MudText>Todo:</MudText>
                         <MudList Color="Color.Warning">
                             <MudListItem>Design in general</MudListItem>
                             <MudListItem>Podium with graphic</MudListItem>
                         </MudList>
+
+                        <MudSpacer />
+
+                        <MudStack>
+                            <MudText Typo="Typo.h3">Post race</MudText>
+                            <MudText Color="Color.Warning">This page is quite unfinished, <br />you can go to the standings though with a following button</MudText>
+                        </MudStack>
 
                         <MudSpacer />
 
@@ -33,7 +33,7 @@
             </MudItem>
             <MudItem xs="4">
                 <MudPaper Class="mud-height-full">
-                    <MudText Typo="Typo.subtitle1">Final standings</MudText>
+                    <MudText Typo="Typo.h5">Final standings</MudText>
                     <MudText>
                         Points for FL aren't shown here yet, they will be assigned though
                     </MudText>
@@ -73,7 +73,7 @@
             </MudItem>
             <MudItem xs="4">
                 <MudPaper Class="mud-height-full">
-                    <MudText Typo="Typo.subtitle1">Incidents during the race</MudText>
+                    <MudText Typo="Typo.h5">Incidents during the race</MudText>
                     <MudSimpleTable>
                         <thead>
                             <tr>
@@ -97,7 +97,7 @@
             </MudItem>
             <MudItem xs="4">
                 <MudPaper Class="mud-height-full">
-                    <MudText Typo="Typo.subtitle1">Upcoming penalties</MudText>
+                    <MudText Typo="Typo.h5">Upcoming penalties</MudText>
                     <MudTable T="DriverPenalty" Items="@DriverPenalties" Dense="true" Class="extra-dense">
                         <HeaderContent>
                             <MudTh>Name</MudTh>
