--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -13,7 +13,8 @@
             <MudItem xs="3">
                 <MudPaper Class="pa-4 mud-height-full">
                     <MudStack AlignItems="AlignItems.Center" Class="mud-height-full">
-                        <MudText Typo="Typo.h4">@Model.Race.Name</MudText>
+                        <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
+
                         <MudStack Row="true" AlignItems="AlignItems.Center">
                             <MudIcon Icon="@Model.Race.Climate.Icon" />
                             <MudText>@Model.Race.Climate.Terminology</MudText>
@@ -29,7 +30,7 @@
                                         <MudStack Spacing="0">
                                             <MudText Typo="Typo.subtitle1">@trait.Name</MudText>
                                             <MudDivider />
-                                            <MudText Typo="Typo.body1">@trait.Description</MudText>
+                                            <MudText>@trait.Description</MudText>
                                         </MudStack>
                                     </MudListItem>
                                 }
@@ -54,7 +55,7 @@
                 <MudPaper Class="pa-4 mud-height-full">
                     <MudTable Items="@Model.RaceWeekDrivers.OrderBy(e => e.Grid)" Dense="true" id="race-week-grid">
                         <ToolBarContent>
-                            <MudText>Grid</MudText>
+                            <MudText Typo="Typo.h5">Grid</MudText>
                             <MudSpacer />
                             <ScreenshotButton TargetId="race-week-grid" />
                         </ToolBarContent>
