--- a/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
+++ b/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
@@ -12,7 +12,7 @@
     <MudGrid>
         <MudItem xs="12">
             <MudPaper Elevation="15" Height="75px" Class="d-flex flex-row justify-center pa-4">
-                <MudText Typo="Typo.h4">Human Being Generator</MudText>
+                <MudText Typo="Typo.h3">Human Being Generator</MudText>
             </MudPaper>
         </MudItem>
         <MudItem xs="6">
@@ -20,12 +20,12 @@
                 <MudPaper Elevation="15" Class="d-flex flex-column justify-space-between pa-4">
                     <MudStack>
                         <div>
-                            <MudText Typo="Typo.subtitle1">Generation settings</MudText>
+                            <MudText Typo="Typo.h6">Generation settings</MudText>
                             <MudDivider />
                         </div>
 
                         <div>
-                            <MudText Typo="Typo.caption">Gender</MudText>
+                            <MudText Typo="Typo.subtitle1">Gender</MudText>
                             <MudChipSet SelectedChipChanged="GenderChange" Mandatory="true">
                                 <MudChip Value="Gender.All" Icon="@ViewHelper.GetGenderIcon(Gender.All)" Default="true">All</MudChip>
                                 <MudChip Value="Gender.Male" Icon="@ViewHelper.GetGenderIcon(Gender.Male)">Male</MudChip>
