--- a/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
@@ -9,7 +9,7 @@
             @if (Drivers != null)
             {
                 <MudStack>
-                    <MudText Typo="Typo.body1">Select drivers to compare</MudText>
+                    <MudText>Select drivers to compare</MudText>
                     <MudStack Row="true" Justify="Justify.SpaceBetween">
                         <MudSelect T="Driver" Label="Driver one" Class="field-lg" ValueChanged="LeftDriverChanged">
                             @foreach (var driver in Drivers)
