--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -18,17 +18,19 @@
                 </MudItem>
                 <MudItem xs="12" sm="6">
                     <MudPaper Elevation="2" MinHeight="300px" Class="pa-4">
-                        <MudStack Spacing="1">
-                            <MudText Typo="Typo.h4">H4</MudText>
-                            <MudText Typo="Typo.h6">H6</MudText>
-                            <MudText Typo="Typo.subtitle1">Subtitle 1</MudText>
-                            <MudText Typo="Typo.subtitle2">Subtitle 2</MudText>
-                            <MudText Typo="Typo.body1">Body 1</MudText>
-                            <MudText Typo="Typo.body2">Body 2</MudText>
-                            <MudText Typo="Typo.overline">Overline</MudText>
-                            <MudText Typo="Typo.caption">Caption</MudText>
-                            <MudText Typo="Typo.button">Button</MudText>
-                        </MudStack>
+                        <MudText Typo="Typo.h1">Head1</MudText>
+                        <MudText Typo="Typo.h2">Head2</MudText>
+                        <MudText Typo="Typo.h3">Head3</MudText>
+                        <MudText Typo="Typo.h4">Head4</MudText>
+                        <MudText Typo="Typo.h5">Head5</MudText>
+                        <MudText Typo="Typo.h6">Head6</MudText>
+                        <MudText Typo="Typo.subtitle1">Subtitle 1</MudText>
+                        <MudText Typo="Typo.subtitle2">Subtitle 2</MudText>
+                        <MudText Typo="Typo.body1">Body 1</MudText>
+                        <MudText Typo="Typo.body2">Body 2</MudText>
+                        <MudText Typo="Typo.button">Button</MudText>
+                        <MudText Typo="Typo.caption">Caption</MudText>
+                        <MudText Typo="Typo.overline">Overline</MudText>
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12" sm="6">
@@ -85,15 +87,7 @@
                 </MudItem>
                 <MudItem xs="12" sm="6">
                     <MudPaper>
-                        <MudText Typo="Typo.h1">Header1</MudText>
-                        <MudText Typo="Typo.h6">Header6</MudText>
-                        <MudText Typo="Typo.subtitle1">Subheader1</MudText>
-                        <MudText Typo="Typo.subtitle2">Subheader2</MudText>
-                        <MudText Typo="Typo.body1">Body1</MudText>
-                        <MudText Typo="Typo.body2">Body2</MudText>
-                        <MudText Typo="Typo.button">Button</MudText>
-                        <MudText Typo="Typo.caption">Caption</MudText>
-                        <MudText Typo="Typo.overline">Overline</MudText>
+
                     </MudPaper>
                 </MudItem>
             </MudGrid>
