--- a/SimTECH/SimTECH/Pages/Factors/Climates.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Climates.razor
@@ -3,12 +3,14 @@
 @inject IDialogService _dialogService
 
 <MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
-    <MudDataGrid T="Climate" Items="@ClimateData" Dense="true" Class="overflow-hidden">
-        <ToolBarContent>
-            <MudText Typo="Typo.h4">Climate</MudText>
+    <MudPaper MinHeight="60px">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
+            <MudText Typo="Typo.h3">Climates</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddItem">New</MudButton>
-        </ToolBarContent>
+            <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
+        </MudStack>
+    </MudPaper>
+    <MudDataGrid T="Climate" Items="@ClimateData" Dense="true" Class="overflow-hidden">
         <Columns>
             <TemplateColumn T="Climate" Title="Icon" Sortable="false">
                 <CellTemplate>
