--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -7,8 +7,8 @@
 @inject ISnackbar Snackbar
 
 <MudContainer MaxWidth="MaxWidth.False">
-    <MudTable Items="@RaceCalendar">
-        <ToolBarContent>
+    <MudPaper MinHeight="60px">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Races</MudText>
             <MudSpacer />
             @if (Season.State == State.Concept)
@@ -17,7 +17,9 @@
                     <MudButton StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary" OnClick="AddRaces">Add races</MudButton>
                 </MudButtonGroup>
             }
-        </ToolBarContent>
+        </MudStack>
+    </MudPaper>
+    <MudTable Items="@RaceCalendar">
         <HeaderContent>
             <MudTh Class="number-col">Round</MudTh>
             <MudTh>Country</MudTh>
