--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
@@ -3,12 +3,14 @@
 @inject IDialogService DialogService
 
 <MudContainer MaxWidth="MaxWidth.Medium">
-    <MudDataGrid T="SeasonEngine" Items="SeasonEngineData" Class="my-2">
-        <ToolBarContent>
-            <MudText Typo="Typo.h4">Engines</MudText>
+    <MudPaper MinHeight="60px">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
+            <MudText Typo="Typo.h3">Engines</MudText>
             <MudSpacer />
             <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterEngine">New</MudButton>
-        </ToolBarContent>
+        </MudStack>
+    </MudPaper>
+    <MudDataGrid T="SeasonEngine" Items="SeasonEngineData">
         <Columns>
             <PropertyColumn Property="e => e.Name" />
             <PropertyColumn Property="e => e.Power" />
@@ -26,7 +28,8 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter] public Season Season { get; set; }
+    [CascadingParameter]
+    public Season Season { get; set; }
 
     private List<SeasonEngine> SeasonEngineData = new();
     private List<Engine> EngineData = new();
