--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
@@ -4,12 +4,14 @@
 @inject IDialogService DialogService
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge">
-    <MudDataGrid T="SeasonTeam" Items="@SeasonTeamEntrants" Class="my-2">
-        <ToolBarContent>
-            <MudText Typo="Typo.h4">Teams</MudText>
+    <MudPaper MinHeight="60px">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
+            <MudText Typo="Typo.h3">Teams</MudText>
             <MudSpacer />
             <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterTeam">New</MudButton>
-        </ToolBarContent>
+        </MudStack>
+    </MudPaper>
+    <MudDataGrid T="SeasonTeam" Items="@SeasonTeamEntrants">
         <Columns>
             <TemplateColumn Sortable="false" CellClass="accent-cell">
                 <CellTemplate>
