--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -5,12 +5,14 @@
 <PageTitle>Engines</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.Medium" Class="mt-4">
-    <MudDataGrid T="Engine" Items="@EngineData" Dense="true">
-        <ToolBarContent>
+    <MudPaper MinHeight="60px">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h4">Engines</MudText>
             <MudSpacer />
             <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddEngine">New</MudButton>
-        </ToolBarContent>
+        </MudStack>
+    </MudPaper>
+    <MudDataGrid T="Engine" Items="@EngineData" Dense="true">
         <Columns>
             <HierarchyColumn T="Engine" />
             <PropertyColumn Property="e => e!.Name" />
