--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -6,12 +6,14 @@
 <PageTitle>Tracks</PageTitle>
 
 <MudContainer Class="mt-4">
-    <MudDataGrid T="Track" Items="@TrackData" Dense="true">
-        <ToolBarContent>
-            <MudText Typo="Typo.h4">Tracks</MudText>
+    <MudPaper MinHeight="60px">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
+            <MudText Typo="Typo.h3">Tracks</MudText>
             <MudSpacer />
             <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddTrack">New</MudButton>
-        </ToolBarContent>
+        </MudStack>
+    </MudPaper>
+    <MudDataGrid T="Track" Items="@TrackData" Dense="true">
         <Columns>
             <HierarchyColumn T="Track" />
             <PropertyColumn Property="e => e!.Name" />
