--- a/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
@@ -31,7 +31,7 @@
                     <MudTextField T="string" @bind-Value="Model.Description" Label="Description" Variant="Variant.Outlined" Lines="5" />
                 </MudItem>
                 <MudItem xs="12">
-                    <MudText Typo="Typo.subtitle1">Modifiers</MudText>
+                    <MudText Typo="Typo.h6">Modifiers</MudText>
                     <MudDivider />
                 </MudItem>
                 <MudItem xs="3">
@@ -68,8 +68,11 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] protected MudDialogInstance? TraitDialog { get; set; }
-    [Parameter] public Trait? Trait { get; set; }
+    [CascadingParameter]
+    protected MudDialogInstance? TraitDialog { get; set; }
+
+    [Parameter]
+    public Trait? Trait { get; set; }
 
     private MudChip? entrantChip;
 
