--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Race/Racing.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Race/Racing.razor
@@ -1,5 +1,5 @@
 ﻿<MudPaper>
-    <MudText Typo="Typo.subtitle1">Score calculation</MudText>
+    <MudText Typo="Typo.h6">Score calculation</MudText>
     <MudText>
         Every advance, the following aspects impact the score
     </MudText>
@@ -47,7 +47,7 @@
 
     <MudDivider Class="my-1" />
 
-    <MudText Typo="Typo.subtitle1">Pitstop</MudText>
+    <MudText Typo="Typo.h6">Pitstop</MudText>
     <MudText>
         Occurs when a tyre used by a strategy starts to reach a number below zero
         AND if there is a tyre left inside driver's the proposed strategy
